@@ -1,3 +1,5 @@
+Samsung-ML-6000_6100 Samsung-ML-6000
+Samsung-ML-7000_7000P_7000N Samsung-ML-7000
 Generic-IBM-Comaptible_Dot_Matrix_Printer Generic-IBM-Compatible_Dot_Matrix_Printer
 Generic-PCL_5_5e_Printer Generic-PCL_5e_Printer
 100576 HP-LaserJet_4000
