@@ -23,7 +23,7 @@
   <!--no known parport probe information--></autodetect>
   <functionality>A</functionality>
   <driver>hpijs</driver>
-  <unverified/><!--no "contrib_url"-->
+  <!--no "contrib_url"-->
   <comments>
     <en>The 6000 and 6100 are PCL5 printers and will work unsing HP drivers without a problem.</en>
   </comments>
