@@ -23,7 +23,7 @@
   <!--no known parport probe information--></autodetect>
   <functionality>A</functionality>
   <driver>pxlmono</driver>
-  <unverified/><!--no "contrib_url"-->
+  <!--no "contrib_url"-->
   <comments>
     <en>
 
