@@ -68,8 +68,9 @@
 	  driver/lj4dith.xml, driver/lj5gray.xml, driver/lj5mono.xml,
 	  driver/ljet4.xml, driver/pxlmono.xml, opt/159.xml, opt/160.xml,
 	  opt/6.xml, opt/Postscript-Resolution.xml,
-	  opt/pxlmono-PrinterResolution.xml: Split the entries for the
-	  Samsung ML-6000 and ML-7000 series into individual printers.
+	  opt/pxlmono-PrinterResolution.xml, db/oldprinterids: Split the
+	  entries for the Samsung ML-6000 and ML-7000 series into
+	  individual printers.
 
 	* driver/gutenprint.xml: Corrected Foomatic IDs of some printers.
 
